--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0"
   }
