--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start index.js --name telegram-bot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
